--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
 	<link rel="shortcut icon" type="image/png" href="media/favicon.png"/>
 </head>
 <body>
-	<div class="videoContainer">
-		<video autoplay muted loop id="video">
-  			<source src="media/Ambigous_Teaser_16by9.mp4" type="video/mp4">
-  			Your browser does not support the video tag.
-		</video> 
+	<div class="page">
+		<div class="videoContainer">
+			<video autoplay muted loop id="video">
+  				<source src="media/Ambigous_Teaser_16by9.mp4" type="video/mp4">
+  				Your browser does not support the video tag.
+			</video> 
+		</div>
+		<div class="social">
+			<a href="https://discord.gg/EcYtBhNTdY" class="link"><img class="button-image" src="media/discord.gif"/></a>
+			<a href="https://soundcloud.com/altosurge" class="link"><img src="media/soundcloud.gif" class="button-image"/></a>
+			<a href="https://twitter.com/altosurge" class="link"><img src="media/twitter.gif" class="button-image"/></a>
+			<a href="https://www.instagram.com/altosurge/" class="link"><img src="media/insta.gif" class="button-image"/></a>
+		</div>
 	</div>
 </body>
 </html> 
