--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="page">
 		<div class="videoContainer">
-			<video autoplay muted loop id="video">
+			<video playsinline autoplay muted loop id="video">
   				<source src="media/Ambigous_Teaser_16by9.mp4" type="video/mp4">
   				Your browser does not support the video tag.
 			</video> 
