--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 			</video> 
 		</div>
 		<div class="social">
-			<a href="https://discord.gg/EcYtBhNTdY" class="link"><img class="button-image" src="media/discord.gif"/></a>
-			<a href="https://soundcloud.com/altosurge" class="link"><img src="media/soundcloud.gif" class="button-image"/></a>
-			<a href="https://twitter.com/altosurge" class="link"><img src="media/twitter.gif" class="button-image"/></a>
-			<a href="https://www.instagram.com/altosurge/" class="link"><img src="media/insta.gif" class="button-image"/></a>
+			<a href="https://discord.gg/EcYtBhNTdY" target="_blank" class="link"><img class="button-image" src="media/discord.gif"/></a>
+			<a href="https://soundcloud.com/altosurge" target="_blank" class="link"><img src="media/soundcloud.gif" class="button-image"/></a>
+			<a href="https://twitter.com/altosurge" target="_blank" class="link"><img src="media/twitter.gif" class="button-image"/></a>
+			<a href="https://www.instagram.com/altosurge/" target="_blank" class="link"><img src="media/insta.gif" class="button-image"/></a>
 		</div>
 	</div>
 </body>
