--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
 	<div class="page">
+		<h1 id="spacer"></h1>
 		<div class="videoContainer">
-			<video playsinline autoplay muted loop id="video">
-  				<source src="media/Ambigous_Teaser_16by9.mp4" type="video/mp4">
-  				Your browser does not support the video tag.
+			<video playsinline autoplay muted loop id="video" src="media/Ambigous_Teaser_16by9.mp4">
 			</video> 
 		</div>
 		<div class="social">
