--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<link rel="shortcut icon" type="image/png" href="media/favicon.png"/>
 	<link rel="stylesheet" href="style.css">
 	<meta charset="utf-8">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://altosurge.com/">
+	<meta property="og:title" content="ALTOSURGE">
+	<meta property="og:description" content="Electronic artist collective...">
+	<meta property="og:image" content="https://www.altosurge.com/media/preview.jpg">
 	<title>ALTOSURGE</title>	
 </head>
 <body>
