--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 			<video playsinline autoplay muted loop id="video" src="media/FINAL_SQUARE.mp4">
 			</video> 
 		</div>
-		<div class="social">
+		<div class="social"><br>
+			<a href="https://soundcloud.com/altosurge/sets/altosurge-vol-1" target="_blank" class="link"><img src="media/soundcloud.gif" class="button-image"/></a>
+			<a href="https://open.spotify.com/album/18lYEIXkq7Nj9d4swDUSP0" target="_blank" class="link"><img src="media/spotify.gif" class="button-image"/></a>
 			<a href="https://discord.gg/EcYtBhNTdY" target="_blank" class="link"><img class="button-image" src="media/discord.gif"/></a>
-			<a href="https://soundcloud.com/altosurge" target="_blank" class="link"><img src="media/soundcloud.gif" class="button-image"/></a>
 			<a href="https://twitter.com/altosurge" target="_blank" class="link"><img src="media/twitter.gif" class="button-image"/></a>
 			<a href="https://www.instagram.com/altosurge/" target="_blank" class="link"><img src="media/insta.gif" class="button-image"/></a>
 		</div>
