--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="page">
 		<h1 id="spacer"></h1>
 		<div class="videoContainer">
-			<video playsinline autoplay muted loop id="video" src="media/FINAL_SQUARE.mp4">
+			<video playsinline autoplay muted loop id="video" src="media/Ambigous_Teaser_16by9.mp4">
 			</video> 
 		</div>
 		<div class="social"><br>
