--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
 			</video> 
 		</div>
 		<div class="social"><br>
-			<a href="https://soundcloud.com/altosurge/sets/altosurge-vol-1" target="_blank" class="link"><img src="media/soundcloud.gif" class="button-image"/></a>
-			<a href="https://open.spotify.com/album/18lYEIXkq7Nj9d4swDUSP0" target="_blank" class="link"><img src="media/spotify.gif" class="button-image"/></a>
-			<a href="https://www.youtube.com/channel/UCwlzunLQG8bIxww-EeLuHSA" target="_blank" class="link"><img src="media/youtube.gif" class="button-image"/></a><br>
-			<a href="https://music.amazon.com/albums/B097KQBJHK?marketplaceId=ATVPDKIKX0DER" target="_blank" class="link"><img src="media/amazon_music.gif" class="button-image"/></a>
-			<a href="https://discord.gg/EcYtBhNTdY" target="_blank" class="link"><img class="button-image" src="media/discord.gif"/></a>
-			<a href="https://twitter.com/altosurge" target="_blank" class="link"><img src="media/twitter.gif" class="button-image"/></a>
-			<a href="https://www.instagram.com/altosurge/" target="_blank" class="link"><img src="media/insta.gif" class="button-image"/></a>
+			<a href="https://www.altosurge.com" target="_blank" class="link"><img src="media/underconstruction.png" class="button-image"/></a>
 		</div>
 	</div>
 </body>
