--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</video> 
 		</div>
 		<div class="social"><br>
-			<a href="https://www.altosurge.com" target="_blank" class="link"><img src="media/underconstruction.png" class="button-image"/></a>
+			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/underconstruction.png" class="button-image"/></a>
 		</div>
 	</div>
 </body>
