NEW SHGITHOP)AIHNOAB

--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
 	<div class="page">
 		<h1 id="spacer"></h1>
 		<div class="videoContainer">
-			<video playsinline autoplay muted loop id="video" src="media/Ambigous_Teaser_16by9.mp4">
-			</video> 
+			<img id="video" src="media/altoballs.gif"/>
 		</div>
 		<div class="social"><br>
-			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/underconstruction.png" class="button-image"/></a>
+			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/PILLAR.gif" class="button-image"/></a>
+			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/OVERSIZED_TEE.gif" class="button-image"/></a>
+			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/MENS_TEE.gif" class="button-image"/></a>
+			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/UNISEX_TEE.gif" class="button-image"/></a>
+			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/DARK_MATTER.gif" class="button-image"/></a>
+			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/DEEP_NEBULA.gif" class="button-image"/></a>
+			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/BLACK_HAT.gif" class="button-image"/></a>
+			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/WHITE_HAT.gif" class="button-image"/></a>
+			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/BIG_POSTER.gif" class="button-image"/></a>
+			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/SMALL_POSTER.gif" class="button-image"/></a>
 		</div>
 	</div>
 </body>
