--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 			<img id="video" src="media/altoballs.gif"/>
 		</div>
 		<div class="social"><br>
-			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/PILLAR.gif" class="button-image"/></a>
-			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/OVERSIZED_TEE.gif" class="button-image"/></a>
-			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/MENS_TEE.gif" class="button-image"/></a>
-			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/UNISEX_TEE.gif" class="button-image"/></a>
-			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/DARK_MATTER.gif" class="button-image"/></a>
-			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/DEEP_NEBULA.gif" class="button-image"/></a>
-			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/BLACK_HAT.gif" class="button-image"/></a>
-			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/WHITE_HAT.gif" class="button-image"/></a>
-			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/BIG_POSTER.gif" class="button-image"/></a>
-			<a href="https://st.fanlink.to/iris" target="_blank" class="link"><img src="media/SMALL_POSTER.gif" class="button-image"/></a>
+			<a href="https://www.etsy.com/listing/1108488618/altosurge-pillar-crewneck-sweatshirt" target="_blank" class="link"><img src="media/PILLAR.gif" class="button-image"/></a>
+			<a href="https://www.etsy.com/listing/1122418959/altosurge-font-oversized-tee" target="_blank" class="link"><img src="media/OVERSIZED_TEE.gif" class="button-image"/></a>
+			<a href="https://www.etsy.com/listing/1122438769/altosurge-orbit-mens-tee" target="_blank" class="link"><img src="media/MENS_TEE.gif" class="button-image"/></a>
+			<a href="https://www.etsy.com/listing/1122431739/altosurge-orbit-unisex-tee" target="_blank" class="link"><img src="media/UNISEX_TEE.gif" class="button-image"/></a>
+			<a href="https://www.etsy.com/listing/1108459208/altosurge-star-embroidered-dark-matter" target="_blank" class="link"><img src="media/DARK_MATTER.gif" class="button-image"/></a>
+			<a href="https://www.etsy.com/listing/1108637096/altosurge-star-embroidered-deep-nebula" target="_blank" class="link"><img src="media/DEEP_NEBULA.gif" class="button-image"/></a>
+			<a href="https://www.etsy.com/listing/1108469092/altosurge-star-unstructured-cap" target="_blank" class="link"><img src="media/BLACK_HAT.gif" class="button-image"/></a>
+			<a href="https://www.etsy.com/listing/1108476048/altosurge-star-unstructured-cap" target="_blank" class="link"><img src="media/WHITE_HAT.gif" class="button-image"/></a>
+			<a href="https://www.etsy.com/listing/1122445061/altosurge-orbit-24x36-in-poster" target="_blank" class="link"><img src="media/BIG_POSTER.gif" class="button-image"/></a>
+			<a href="https://www.etsy.com/listing/1122451291/altosurge-orbit-12x18-in-poster" target="_blank" class="link"><img src="media/SMALL_POSTER.gif" class="button-image"/></a>
 		</div>
 	</div>
 </body>
