--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>ATOSURGE</title>
+<title>ALTOSURGE</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 <link rel="icon" href="media/favicon.ico">
 <script src="script.js" defer></script>
