--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
 	
 	<div class="header_container">
 		<div data-tab-target="#home" class="header_img">
-			<img class="top_image_header" src="media/header_logo.png" width="600" height="150" alt=""/>
-			<img class="image_header_hover" src="media/header_thing.gif" width="600" height="150" alt=""/>
+			<img class="top_image_header" src="media/header_logo.png" alt=""/>
+			<img class="image_header_hover" src="media/header_thing.gif" alt=""/>
 		</div>
 	</div>
 	
 	<div class="tab_container">
 		<ul class="tabs">
 			<li data-tab-target="#artists" class="nonactive tab">
-				<img class="tab_image" src="media/tabs/artists.png" width="250" height="50" alt=""/>
-				<img class="tab_image_active" src="media/tabs/artists_active.png" width="250" height="50" alt=""/>
+				<img class="tab_image" src="media/tabs/artists.png" alt=""/>
+				<img class="tab_image_active" src="media/tabs/artists_active.png" alt=""/>
 			</li>
 			<li data-tab-target="#releases" class="nonactive tab">
-				<img class="tab_image" src="media/tabs/releases.png" width="250" height="50" alt=""/>
-				<img class="tab_image_active" src="media/tabs/releases_active.png" width="250" height="50" alt=""/>
+				<img class="tab_image" src="media/tabs/releases.png" alt=""/>
+				<img class="tab_image_active" src="media/tabs/releases_active.png" alt=""/>
 			</li>
 			<li data-tab-target="#merch" class="nonactive tab">
-				<img class="tab_image" src="media/tabs/merch.png" width="250" height="50" alt=""/>
-				<img class="tab_image_active" src="media/tabs/merch_active.png" width="250" height="50" alt=""/>
+				<img class="tab_image" src="media/tabs/merch.png" alt=""/>
+				<img class="tab_image_active" src="media/tabs/merch_active.png" alt=""/>
 			</li>
 			<li data-tab-target="#socials" class="nonactive tab">
-				<img class="tab_image" src="media/tabs/socials.png" width="250" height="50" alt=""/>
-				<img class="tab_image_active" src="media/tabs/socials_active.png" width="250" height="50" alt=""/>
+				<img class="tab_image" src="media/tabs/socials.png" alt=""/>
+				<img class="tab_image_active" src="media/tabs/socials_active.png" alt=""/>
 			</li>
 			<li data-tab-target="#submit" class="nonactive tab">
-				<img class="tab_image" src="media/tabs/submit.png" width="250" height="50" alt=""/>
-				<img class="tab_image_active" src="media/tabs/submit_active.png" width="250" height="50" alt=""/>
+				<img class="tab_image" src="media/tabs/submit.png" alt=""/>
+				<img class="tab_image_active" src="media/tabs/submit_active.png" alt=""/>
 			</li>
 		</ul>
 	</div>
@@ -51,13 +51,13 @@
 			<div id="home_content">
 				<div id="release_container">
 					<div id="release_video">
-						 <a href="https://en.wikipedia.org/wiki/Trollface#/media/File:Trollface_non-free.png" target="_blank">
-							<img src="media/release.png" width="650" height="650" alt=""/>
+						 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+							<img class="home_img" src="media/release.png" alt=""/>
 						</a>
 					</div>
-					<div id="artist_block">
+					<div id="artist_home_block">
 						<a href="https://soundcloud.com/altosurge" target="_blank">
-							<img src="media/artists/altosurge.png" width="300" height="200" alt=""/>
+							<img class="artist_img" src="media/artists/altosurge.png" alt=""/>
 						</a>
 					</div>
 				</div>
@@ -180,7 +180,7 @@
 			<div id="merch_content">
 				<div id="release_container">
 					<div id="merch_video">
-						<img src="media/merch/2023.png" width="800" height="160" alt=""/>
+						<img class="submissions_img" src="media/merch/2023.png" alt=""/>
 					</div>
 				</div>
 			</div>
@@ -194,32 +194,32 @@
 			<div id="socials_content">
 				<div class="socials_img">
 					<a href="https://www.youtube.com/channel/UCwlzunLQG8bIxww-EeLuHSA" target="_blank">
-						<img class="top_image_header" src="media/socials/youtube.png" width="600" height="120" alt=""/>
-						<img class="image_header_hover" src="media/socials/youtube_hover.png" width="600" height="120" alt=""/>
+						<img class="top_image_header" src="media/socials/youtube.png" alt=""/>
+						<img class="image_header_hover" src="media/socials/youtube_hover.png" alt=""/>
 					</a>
 				</div>
 				<div class="socials_img">
 					<a href="https://www.twitch.tv/altosurge" target="_blank">
-						<img class="top_image_header" src="media/socials/twitch.png" width="600" height="120" alt=""/>
-						<img class="image_header_hover" src="media/socials/twitch_hover.png" width="600" height="120" alt=""/>
+						<img class="top_image_header" src="media/socials/twitch.png" alt=""/>
+						<img class="image_header_hover" src="media/socials/twitch_hover.png" alt=""/>
 					</a>
 				</div>
 				<div class="socials_img">
 					<a href="https://twitter.com/altosurge" target="_blank">
-						<img class="top_image_header" src="media/socials/twitter.png" width="600" height="120" alt=""/>
-						<img class="image_header_hover" src="media/socials/twitter_hover.png" width="600" height="120" alt=""/>
+						<img class="top_image_header" src="media/socials/twitter.png" alt=""/>
+						<img class="image_header_hover" src="media/socials/twitter_hover.png" alt=""/>
 					</a>
 				</div>
 				<div class="socials_img">
 					<a href="https://www.instagram.com/altosurge" target="_blank">
-						<img class="top_image_header" src="media/socials/instagram.png" width="600" height="120" alt=""/>
-						<img class="image_header_hover" src="media/socials/instagram_hover.png" width="600" height="120" alt=""/>
+						<img class="top_image_header" src="media/socials/instagram.png" alt=""/>
+						<img class="image_header_hover" src="media/socials/instagram_hover.png" alt=""/>
 					</a>
 				</div>
 				<div class="socials_img">
 					<a href="https://disboard.org/server/976845024560054272" target="_blank">
-						<img class="top_image_header" src="media/socials/discord.png" width="600" height="120" alt=""/>
-						<img class="image_header_hover" src="media/socials/discord_hover.png" width="600" height="120" alt=""/>
+						<img class="top_image_header" src="media/socials/discord.png" alt=""/>
+						<img class="image_header_hover" src="media/socials/discord_hover.png" alt=""/>
 					</a>
 				</div>
 			</div>
@@ -233,10 +233,10 @@
 			<div id="merch_content">
 				<div id="release_container">
 					<div id="merch_video">
-						<img src="media/submissions/submissions_closed.png" width="800" height="160" alt=""/>
+						<img class="submissions_img" src="media/submissions/submissions_closed.png" alt=""/>
 					</div>
 					<div id="merch_video">
-						<img src="media/submissions/soon.png" width="800" height="160" alt=""/>
+						<img class="submissions_img" src="media/submissions/soon.png" alt=""/>
 					</div>
 				</div>
 			</div>
