--- a/index.html
+++ b/index.html
@@ -232,12 +232,15 @@
 		<div id="submit" data-tab-content>
 			<div id="merch_content">
 				<div id="release_container">
-					<div id="merch_video">
-						<img class="submissions_img" src="media/submissions/submissions_closed.png" alt=""/>
+					<div id="submissions_video">
+						<img class="submissions_img" src="media/submissions/submissions_open-removebg-preview.png" alt=""/>
 					</div>
-					<div id="merch_video">
-						<img class="submissions_img" src="media/submissions/soon.png" alt=""/>
-					</div>
+					<div class="submissions_download_img">
+						<a href="media/submissions/ALTO_2023_TEMPLATE.pdf" download>
+							<img class="top_image_header" src="media/submissions/download.png" alt=""/>
+							<img class="image_header_hover" src="media/submissions/download_hover.gif" alt=""/>
+						</a>
+				</div>
 				</div>
 			</div>
 		</div>
