--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div id="home_content">
 				<div id="release_container">
 					<div id="release_video">
-						 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+						 <a href="https://www.twitch.tv/altosurge" target="_blank">
 							<img class="home_img" src="media/release.png" alt=""/>
 						</a>
 					</div>
