--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div id="home_content">
 				<div id="release_container">
 					<div id="release_video">
-						 <a href="https://www.twitch.tv/altosurge/schedule?seriesID=8b58e378-d4fe-4544-86f9-9bcd35da0976" target="_blank">
+						 <a href="https://soundcloud.com/altosurge/sets/operation-revival" target="_blank">
 							<img class="home_img" src="media/release.png" alt=""/>
 						</a>
 					</div>
