--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div id="home_content">
 				<div id="release_container">
 					<div id="release_video">
-						 <a href="https://soundcloud.com/altosurge/sets/operation-revival" target="_blank">
+						 <a href="https://alto.fanlink.to/revival" target="_blank">
 							<img class="home_img" src="media/release.png" alt=""/>
 						</a>
 					</div>
