--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 			<div id="home_content">
 				<div id="release_container">
 					<div id="release_video">
-						 <a href="https://alto.fanlink.to/revival" target="_blank">
-							<img class="home_img" src="media/release.png" alt=""/>
+						 <a href="https://alto.fanlink.tv/homicide" target="_blank">
+							<img class="home_img" src="media/releases/homicidal.jpg" alt=""/>
 						</a>
 					</div>
 					<div id="artist_home_block">
@@ -140,13 +140,28 @@
 		<div id="releases" data-tab-content>
 			<div id="releases_content">
 				<div id="release_block">
-					<a href="https://1821.fanlink.to/aerial" target="_blank">
-						<img id=release_img src="media/releases/1821aerial.jpg" width="300" height="300" alt=""/>
+					<a href="https://soundcloud.com/altosurge/homicidal-thoughts" target="_blank">
+						<img id=release_img src="media/releases/homicidal.jpg" width="300" height="300" alt=""/>
 					</a>
 				</div>
 				<div id="release_block">
-					<a href="https://soundcloud.com/bani_redux/at-most-fear" target="_blank">
-						<img id=release_img src="media/releases/banifear.jpg" width="300" height="300" alt=""/>
+					<a href="https://soundcloud.com/altosurge/voltion-x-bani-black-tar-heroin" target="_blank">
+						<img id=release_img src="media/releases/bth.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+			    <div id="release_block">
+					<a href="https://soundcloud.com/volitionfm/sets/thisisvolitionremixes" target="_blank">
+						<img id=release_img src="media/releases/voliremix.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/altosurge/sets/operation-revival" target="_blank">
+						<img id=release_img src="media/releases/revive.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/1821sound/sets/aerial" target="_blank">
+						<img id=release_img src="media/releases/ariel.jpg" width="300" height="300" alt=""/>
 					</a>
 				</div>
 				<div id="release_block">
@@ -167,6 +182,81 @@
 				<div id="release_block">
 					<a href="https://altosurge.fanlink.to/vol2" target="_blank">
 						<img id=release_img src="media/releases/alto2.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/sirhctyler/sets/dimension-remixes" target="_blank">
+						<img id=release_img src="media/releases/dremix.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/1821sound/sets/tundra" target="_blank">
+						<img id=release_img src="media/releases/tundra.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/sxllymusic/exalt" target="_blank">
+						<img id=release_img src="media/releases/sxlly.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/altosurge/terra-saw" target="_blank">
+						<img id=release_img src="media/releases/terra.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://www.youtube.com/watch?v=uhkasoNtM4w" target="_blank">
+						<img id=release_img src="media/releases/orange.png" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/dauamp3/sets/tear-it-apart" target="_blank">
+						<img id=release_img src="media/releases/tear.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/starnine-music/cygnus" target="_blank">
+						<img id=release_img src="media/releases/starnine.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/fax0508/sets/journey" target="_blank">
+						<img id=release_img src="media/releases/journey.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/sirhctyler/sets/dimension-ep" target="_blank">
+						<img id=release_img src="media/releases/dimension.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/superzrussell/sets/arrival-ep-altosurge" target="_blank">
+						<img id=release_img src="media/releases/arrival.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/1821sound/sets/eighteentwentyone" target="_blank">
+						<img id=release_img src="media/releases/1821.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://www.youtube.com/watch?v=qyHrWif1iWg" target="_blank">
+						<img id=release_img src="media/releases/lullaby.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/sirhctyler/sets/iris-ep" target="_blank">
+						<img id=release_img src="media/releases/iris.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/bani_redux/bun-n-bass" target="_blank">
+						<img id=release_img src="media/releases/bun_n_bass.jpg" width="300" height="300" alt=""/>
+					</a>
+				</div>
+				<div id="release_block">
+					<a href="https://soundcloud.com/altosurge/sets/altosurge-vol-1" target="_blank">
+						<img id=release_img src="media/releases/alto_v1.jpg" width="300" height="300" alt=""/>
 					</a>
 				</div>
 			</div>
