artists and shit
more upodates

--- a/index.html
+++ b/index.html
@@ -76,11 +76,6 @@
 					</a>
 				</div>
 				<div id="artist_block">
-					<a href="https://linktr.ee/AveenMusic" target="_blank">
-						<img src="media/artists/aveen.png" width="300" height="200" alt=""/>
-					</a>
-				</div>
-				<div id="artist_block">
 					<a href="https://bani-redux.carrd.co" target="_blank">
 						<img src="media/artists/bani.png" width="300" height="200" alt=""/>
 					</a>
@@ -108,6 +103,11 @@
 				<div id="artist_block">
 					<a href="https://soundcloud.com/kamisama1" target="_blank">
 						<img src="media/artists/kami.png" width="300" height="200" alt=""/>
+					</a>
+				</div>
+				<div id="artist_block">
+					<a href="https://linktr.ee/kvraitunes" target="_blank">
+						<img src="media/artists/kvrai.png" width="300" height="200" alt=""/>
 					</a>
 				</div>
 				<div id="artist_block">
@@ -270,7 +270,7 @@
 			<div id="merch_content">
 				<div id="release_container">
 					<div id="merch_video">
-						<img class="submissions_img" src="media/merch/2023.png" alt=""/>
+						<img class="submissions_img" src="media/merch/indevl.png" alt=""/>
 					</div>
 				</div>
 			</div>
@@ -323,14 +323,16 @@
 			<div id="merch_content">
 				<div id="release_container">
 					<div id="submissions_video">
-						<img class="submissions_img" src="media/submissions/submissions_open-removebg-preview.png" alt=""/>
+						<img class="submissions_img" src="media/submissions/submissions_closed_tran.png" alt=""/>
 					</div>
+<!--
 					<div class="submissions_download_img">
 						<a href="media/submissions/ALTO_2023_TEMPLATE.pdf" download>
 							<img class="top_image_header" src="media/submissions/download.png" alt=""/>
 							<img class="image_header_hover" src="media/submissions/download_hover.gif" alt=""/>
 						</a>
 				</div>
+-->
 				</div>
 			</div>
 		</div>
