--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					</a>
 				</div>
 				<div id="artist_block">
-					<a href="https://soundcloud.com/kamisama1" target="_blank">
+					<a href="https://soundcloud.com/iluvkami" target="_blank">
 						<img src="media/artists/kami.png" width="300" height="200" alt=""/>
 					</a>
 				</div>
